k8s_2/msdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: movie-service
  name: movie-service
  namespace: mehant
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: movie-service
  strategy: {}
  template:
    metadata:
      annotations:
        move2kube.konveyor.io/service.expose: "true"
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: movie-service
      name: movie-service
    spec:
      containers:
        - env:
            - name: SPRING_CONFIG_NAME
              value: application,movie-service
            - name: SPRING_CONFIG_ADDITIONAL-LOCATION
              value: classpath:/,classpath:/config/,file:/,file:config/,file:/confs/
          image: docker.io/kmehant/movie-service:latest
          imagePullPolicy: Always
          name: movie-service
          ports:
            - containerPort: 8082
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config-volume
              mountPath: /confs
      volumes:
        - name: config-volume
          configMap:
            name: msconfigmap
      restartPolicy: Always
status: {}



# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: movie-service
# spec:
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: movie-service
#     spec:
#       containers:
#       - name: movie-service
#         image: docker.io/kmehant/movie-service:latest
#         imagePullPolicy: Always
#         ports:
#         - containerPort: 8082
#           protocol: TCP
#       restartPolicy: Always
