k8s_2/rsdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: review-service
  name: review-service
  namespace: mehant
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: review-service
  strategy: {}
  template:
    metadata:
      annotations:
        move2kube.konveyor.io/service.expose: "true"
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: review-service
      name: review-service
    spec:
      containers:
        - env:
            - name: SPRING_CONFIG_NAME
              value: application,review-service
            - name: SPRING_CONFIG_ADDITIONAL-LOCATION
              value: classpath:/,classpath:/config/,file:/,file:config/,file:/confs/
          image: docker.io/kmehant/review-service:latest
          imagePullPolicy: Always
          name: review-service
          ports:
            - containerPort: 8083
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: config-volume
              mountPath: /confs
      volumes:
        - name: config-volume
          configMap:
            name: rsconfigmap
      restartPolicy: Always
status: {}


# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: review-service
# spec:
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: review-service
#     spec:
#       containers:
#       - name: review-service
#         image: docker.io/kmehant/review-service:latest
#         imagePullPolicy: Always
#         ports:
#         - containerPort: 8083
#           protocol: TCP
#       restartPolicy: Always
