k8s_2/csservice.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: ms-config-server
  name: ms-config-server
  namespace: mehant
spec:
  ports:
    - name: port-8888
      port: 8888
      targetPort: 8888
  selector:
    move2kube.konveyor.io/service: ms-config-server
  type: ClusterIP
  
status:
  loadBalancer: {}

# kind: Service
# apiVersion: v1
# metadata:
#   name: ms-config-server
# spec:
#   ports:
#   - port: 8888
#     protocol: TCP
#     targetPort: 8888
#   selector:
#     app: ms-config-server
