k8s_2/ingress.yml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   creationTimestamp: null
#   labels:
#     move2kube.konveyor.io/service: myproject
#   name: myproject
# spec:
#   rules:
#   - http:
#       paths:
#         # - backend:
#         #     service:
#         #       name: eureka
#         #       port:
#         #         name: port-8761
#         #   path: /
#         #   pathType: Prefix
#         - backend:
#             service:
#               name: movie-service
#               port:
#                 name: port-8082
#           path: /
#           pathType: Prefix
#         # - backend:
#         #     service:
#         #       name: review-service
#         #       port:
#         #         name: port-8083
#         #   path: /
#         #   pathType: Prefix
# status:
#   loadBalancer: {}


# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: myproject
#   namespace: mehant
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /*
#         backend:
#           serviceName: movie-service
#           servicePort: 8082


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: mehant
 namespace: mehant
#  annotations:
#   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 tls:
 - hosts:
   - mehant.irlhc12-cf7808d3396a7c1915bd1818afbfb3c0-0000.us-south.containers.appdomain.cloud
   secretName: irlhc12-cf7808d3396a7c1915bd1818afbfb3c0-0000
 rules:
 - host: mehant.irlhc12-cf7808d3396a7c1915bd1818afbfb3c0-0000.us-south.containers.appdomain.cloud
   http:
     paths:
     - path: /api
       pathType: Prefix
       backend:
         serviceName: movie-service
         servicePort: 8082
     - path: /movies
       pathType: Prefix
       backend:
         serviceName: movie-service
         servicePort: 8082
     - path: /reviews
       pathType: Prefix
       backend:
         serviceName: review-service
         servicePort: 8083
